# server/docs/swagger.json
@@ -266,6 +266,12 @@
                     },
                     {
                         "type": "integer",
+                        "description": "Survey Format ID (optional)",
+                        "name": "survey_format_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
                         "default": 1,
                         "description": "Page (required)",
                         "name": "page",
